--- a/modules/admin_manual/pages/installation/quick_guides/ubuntu_22_04.adoc
+++ b/modules/admin_manual/pages/installation/quick_guides/ubuntu_22_04.adoc
@@ -157,6 +157,31 @@ DocumentRoot /var/www/owncloud
 EOM
 ----
 
+
+==== Test the configuration
+
+[source,bash]
+----
+apachectl -t
+----
+
+At this point you would expect the following output
+
+[source,bash]
+----
+apachectl -t
+AH00112: Warning: DocumentRoot [/var/www/owncloud] does not exist
+AH00558: apache2: Could not reliably determine the server's fully qualified domain name, using 127.0.0.1. Set the 'ServerName' directive globally to suppress this message
+Syntax OK
+----
+
+First warning will be resolved after we install ownCloud. Second message we can resolve with:
+
+[source,bash]
+----
+echo "ServerName $my_domain" >> /etc/apache2/apache2.conf
+----
+
 ==== Enable the Virtual Host Configuration
 
 [source,bash]
