--- a/modules/admin_manual/pages/enterprise/firewall/file_firewall.adoc
+++ b/modules/admin_manual/pages/enterprise/firewall/file_firewall.adoc
@@ -1,34 +1,28 @@
 = File Firewall
 :toc: right
+:description: The File Firewall lets you control access and sharing in fine detail by creating rules for allowing or denying access restrictions.
 :regex-info-url: http://www.regular-expressions.info/
 :supported-mimetype-list-url: https://github.com/owncloud/core/blob/master/resources/config/mimetypemapping.dist.json
 
 == Introduction
 
-The File Firewall GUI enables you to manage firewall rule sets. 
-You can find it in your ownCloud admin page, under menu:Admin[Security]. 
-The File Firewall lets you control access and sharing in fine detail, by creating rules for allowing or denying access restrictions based on: _group_, _upload size_, _client devices_, _IP address_, _time of day_, as well as many more criteria. 
+{description} This is based on: _group_, _upload size_, _client devices_, _IP address_, _time of day_, as well as many more criteria. The File Firewall GUI enables you to manage the firewall rule sets. You can find it in your ownCloud admin page, under menu:Admin[Security]. 
+
 In addition to these restriction options, the File Firewall app also supports rules based on {regex-info-url}[regular expressions].
 
 == How the File Firewall Works
 
-Each firewall rule set consists of one or more conditions. 
-If a request matches all of the conditions, in at least one rule set, then the request is blocked by the firewall. 
-Otherwise, the request is allowed by the firewall.
+Each firewall rule set consists of one or more conditions. If a request matches all of the conditions, in at least one rule set, then the request is blocked by the firewall. Otherwise, the request is allowed by the firewall.
 
 NOTE: The File Firewall app cannot lock out administrators from the web interface when rules are misconfigured.
 
 == Using the File Firewall
 
-Figure 1 shows an empty firewall configuration panel. 
-Set your logging level to *Blocked Requests Only* for debugging, and create a new rule set by clicking btn:[Add Group]. 
-After setting up your rules you must click btn:[Save Rules].
+Figure 1 shows an empty firewall configuration panel. Set your logging level to *Blocked Requests Only* for debugging, and create a new rule set by clicking btn:[Add Group]. After setting up your rules you must click btn:[Save Rules].
 
 image:enterprise/firewall/firewall-1.png[Figure 1: Empty File Firewall configuration panel]
 
-Figure 2 shows two rules. 
-The first rule, *No Support outside office hours*, prevents members of the support group from logging into the ownCloud Web interface from 5pm-9am, and also blocks client syncing. 
-The second rule prevents members of the "qa-team" group from accessing the Web UI from IP addresses that are outside of the local network.
+Figure 2 shows two rules. The first rule, *No Support outside office hours*, prevents members of the support group from logging into the ownCloud Web interface from 5pm-9am, and also blocks client syncing. The second rule prevents members of the "qa-team" group from accessing the Web UI from IP addresses that are outside of the local network.
 
 image:enterprise/firewall/firewall-2.png[Figure 2: Two example rules that restrict logins per user group]
 
@@ -70,9 +64,7 @@ When a file is uploaded the size has to be (less|greater or equal) to the given 
 
 ==== File Mimetype Upload
 
-Block a request based on the mimetype of a file being uploaded.
-The match can be the complete mimetype, part of the mimetype from the start or end of the mimetype.
-Negative matches are also supported; i.e., all mimetypes that don’t match the supplied mimetype, or all mimetypes that don’t start or end with the partial mimetype supplied.
+Block a request based on the mimetype of a file being uploaded. The match can be the complete mimetype, part of the mimetype from the start or end of the mimetype. Negative matches are also supported; i.e., all mimetypes that don’t match the supplied mimetype, or all mimetypes that don’t start or end with the partial mimetype supplied.
 
 The full list of conditions is (File mimetype upload):
 
@@ -87,7 +79,7 @@ NOTE: The complete list of available mimetypes which ownCloud supports is availa
 
 ==== Common Mimetypes
 
-[cols=",",options="header",]
+[cols=",",options="header"]
 |===
 | suffix | mimetype
 | avi | video/x-msvideo
@@ -107,11 +99,12 @@ One of the parent folders or the file itself (is|is not) tagged with a System ta
 
 The File Firewall supports regular expressions, allowing you to create custom rules using the following conditions:
 
-* IP Range (IPv4)
-* IP Range (IPv6)
+* File mimetype upload
+* Client IP Range (IPv4)
+* Client IP Range (IPv6)
+* Request URL
 * User agent
 * User group
-* Request URL
 
 You can combine multiple rules into one rule, e.g., if a rule applies to both the support and the qa-team you could write your rule like this:
 
@@ -120,13 +113,11 @@ You can combine multiple rules into one rule, e.g., if a rule applies to both th
 Regular Expression > ^(support|qa-team)$ > is > User group
 ----
 
-CAUTION: We do not recommend modifying the configuration values directly in your `config.php`.
-These use JSON encoding, so the values are difficult to read and a single typo will break all of your rules.
+CAUTION: We do not recommend modifying the configuration values directly in your `config.php`. These use JSON encoding, so the values are difficult to read and a single typo will break all of your rules.
 
 === Controlling Access to Folders
 
-The easiest way to block access to a folder, starting with ownCloud 9.0,
-is to use a system tag. A new rule type was added which allows you to block access to files and folders, where at least one of the parents has a given tag.
+The easiest way to block access to a folder, starting with ownCloud 9.0, is to use a system tag. A new rule type was added which allows you to block access to files and folders, where at least one of the parents has a given tag.
 
 Now you just need to add the tag to the folder or file, and then block the tag with the File Firewall. This example blocks access to any folder with the tag "Confidential" from outside access.
 
@@ -150,16 +141,13 @@ The firewall blocks requests according to the defined rules but does not log any
 
 ==== Blocked Requests Only
 
-The firewall logs blocked requests to the system log at **warning** level.
-To see these logs, the system log level must be set to a minimum level of **warning**.
+The firewall logs blocked requests to the system log at **warning** level. To see these logs, the system log level must be set to a minimum level of **warning**.
 
 ==== All Requests
 
-The firewall logs blocked and successful requests to the system log at **warning** and **info** levels respectively.
-To see all these logs, the system log level must be set to a minimum level of **info**.
+The firewall logs blocked and successful requests to the system log at **warning** and **info** levels respectively. To see all these logs, the system log level must be set to a minimum level of **info**.
 
-NOTE: Logging all requests can generate a large amount of log data.
-It is recommended to only select all requests for short-term checking of rule settings.
+NOTE: Logging all requests can generate a large amount of log data. It is recommended to only select all requests for short-term checking of rule settings.
 
 === Custom Configuration for Branded Clients
 
@@ -174,11 +162,7 @@ The configuration is a `User-Agent` => `Device` map. `Device` must be one of the
 * desktop
 * desktop_branded
 
-The `User-Agent` is always compared all lowercase. By default the agent is compared with `equals`. 
-When a trailing or leading asterisk, `*`, is found, the agent is compared with `starts with` or `ends with`. 
-If the agent has both a leading and a trailing `*`, the string must appear anywhere. 
-For technical reasons the `User-Agent` string must be at least 4 characters, including wildcards. 
-When you build your branded client you have the option to create a custom User Agent.
+The `User-Agent` is always compared all lowercase. By default the agent is compared with `equals`. When a trailing or leading asterisk, `*`, is found, the agent is compared with `starts with` or `ends with`. If the agent has both a leading and a trailing `*`, the string must appear anywhere. For technical reasons the `User-Agent` string must be at least 4 characters, including wildcards. When you build your branded client you have the option to create a custom User Agent.
 
 In this example configuration you need to replace the example User Agent strings, for example `'android_branded'`, with your own User Agent strings:
 
@@ -204,10 +188,8 @@ The Web UI dropdown then expands to the following options:
 * Android Client (Branded) - visible when at least one `android_branded` is defined
 * iOS Client (Branded) - visible when at least one `ios_branded` is defined
 * Desktop Client (Branded) - visible when at least one `desktop_branded` is defined
-* All branded clients - visible when at least one of `android_branded`,
-`ios_branded` or `desktop_branded` is defined
-* All non-branded clients - visible when at least one of
-`android_branded`, `ios_branded` or `desktop_branded` is defined
+* All branded clients - visible when at least one of `android_branded`, `ios_branded` or `desktop_branded` is defined
+* All non-branded clients - visible when at least one of `android_branded`, `ios_branded` or `desktop_branded` is defined
 * Others (Browsers, etc.) - always visible
 
 Then these options operate this way:
