[10.10] [PR 895] Document ldapNetworkTimeout
Backport of PR #895

--- a/modules/admin_manual/pages/configuration/server/occ_commands/app_commands/_ldap_integration_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/app_commands/_ldap_integration_commands.adoc
@@ -362,6 +362,7 @@ Available keys, along with default values for configValue, are listed in the tab
 | ldapLoginFilterMode           | 0
 | ldapLoginFilterUsername       | 1
 | ldapNestedGroups              | 0
+| ldapNetworkTimeout            | 15
 | ldapOverrideMainServer        |
 | ldapPagingSize                | 500
 | ldapPort                      | 389
